--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "test": "jest",
-    "dev:react": "webpack -w",
+    "dev:react": "live-server ./client/dist & webpack --mode=development -w",
     "dev": "live-server ./client/dist"
   },
   "repository": {
