--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0"
   },
