--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # compiled files
-/dist/bundle.js
-/dist/bundle.js.map
+client/dist/bundle.js
+client/dist/bundle.js.map
 
 node_modules
+
+# test
+coverage
