adds  shallow test for star rating

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "test": "jest --coverage",
+    "test": "jest --collectCoverage",
     "dev:react": "live-server ./client/dist & webpack --mode=development -w",
     "dev": "live-server ./client/dist"
   },
