--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.32.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
