--- a/package.json
+++ b/package.json
@@ -51,14 +51,15 @@
     "jest-css-modules-transform": "^4.2.0",
     "jest-enzyme": "^7.1.2",
     "jest-svg-transformer": "^1.0.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-icons": "^4.2.0",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.32.0",
-    "webpack-cli": "^4.6.0",
-    "moment": "^2.29.1"
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
