--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "^5.2.1",
     "enzyme-adapter-react-16": "^1.15.6",
     "express": "^4.17.1",
+    "fast-sort": "^3.0.2",
     "jest": "^26.6.3",
     "jest-css-modules-transform": "^4.2.0",
     "jest-enzyme": "^7.1.2",
