--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "description": "Front End Capstone",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "webpack --mode production",
     "test": "jest --collectCoverage",
     "dev:react": "live-server ./client/dist & webpack --mode development -w",
